...
                    <view key="view" contentMode="scaleToFill" id="ihJ-6K-NGJ">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LfG-Ew-Czc">
                                <rect key="frame" x="337" y="322.5" width="22" height="22"/>
                                <accessibility key="accessibilityConfiguration" label="Add City"/>
                                <connections>
                                    <action selector="selectedAddCity:" destination="bMI-D2-08h" eventType="touchUpInside" id="i32-LU-pCi"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
